# dovex

./: .flake8  .gitignore  .travis.yml  Dockerfile  README.md  config.local.py  config.py  main.py  ml.py  proxy.py  pyproject.toml  requirements.txt  util.py  wsgi.py
.github/workflows/: python-app.yml
static/: main.css  main.js  ml.js
templates/: explore.html  help.html  main.html  process.html  uploads.html
tests/: __init__.py  conftest.py  test_main.py  test_ml_algorithms.py  test_ml_correlation.py  test_ml_preprocessing.py  test_ml_projections.py  test_util.py
uploads/: iris.data
